--- a/characters/index.html
+++ b/characters/index.html
@@ -60,6 +60,8 @@
 
         <script src="../common/data/units.js"></script>
         <script src="../common/data/aliases.js"></script>
+        <script src="../common/data/availableClasses.js"></script>
+        <script src="../common/data/availableTags.js"></script>
         <script src="../common/js/unitUtils.js"></script>
         <script src="../common/data/details.js"></script>
         <script src="../common/data/cooldowns.js"></script>
