Update of tag filter usings Tags.js and availableTags + Add the tags in the details

--- a/characters/index.html
+++ b/characters/index.html
@@ -59,6 +59,7 @@
         <script src="../common/libs/js/ngDialog.min.js"></script>
 
         <script src="../common/data/units.js"></script>
+        <script src="../common/data/tags.js"></script>
         <script src="../common/data/aliases.js"></script>
         <script src="../common/data/availableClasses.js"></script>
         <script src="../common/data/availableTags.js"></script>
